tests/init/neg/leak-warm.check
-- Error: tests/init/neg/leak-warm.scala:18:26 -------------------------------------------------------------------------
18 |    val l: List[A] = List(c, d) // error
   |                          ^^^^
   |             Cannot prove that the value is fully initialized. Only initialized values may be used as arguments.
